# fmt-demo

./: .clang-tidy  CMakeLists.txt  README.md  settings.json
src/: main.cpp
