cmake_minimum_required(VERSION 3.9...3.18)
project(fmt-demo VERSION 0.1.0 DESCRIPTION "fmt demo project using CMake" LANGUAGES CXX)

find_package(fmt REQUIRED)
add_executable(fmt-demo src/main.cpp)
target_compile_features(fmt-demo PUBLIC cxx_std_17)
set_target_properties(fmt-demo PROPERTIES CXX_EXTENSIONS OFF)
target_link_libraries(fmt-demo PRIVATE fmt::fmt)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|AppleClang|GNU")
    target_compile_options(fmt-demo PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic)
endif()
if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    target_compile_options(fmt-demo PRIVATE -Wweak-vtables -Wexit-time-destructors -Wglobal-constructors -Wmissing-noreturn)
endif()
if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    target_compile_options(fmt-demo PRIVATE /W4 /w44265 /w44061 /w44062)
endif()
